closes #594, overflow fix on main content area

--- a/client/src/document/index.scss
+++ b/client/src/document/index.scss
@@ -15,6 +15,7 @@ a.page-not-created {
 
 .main-page-content {
   padding: 0.5rem 1rem 1rem;
+  overflow-wrap: break-word;
 
   img {
     display: inline-block;
